--- a/ex_eventhandler.html
+++ b/ex_eventhandler.html
@@ -6,6 +6,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css" crossorigin="anonymous">
     <script src="./m-control.js"></script>
+    <script src="./m-example.js"></script>
 </head>
 
 <body class=pure  m-control="MCtrlExample">
@@ -51,7 +52,7 @@
         MControl.register(
 
             // create your controller
-            class MCtrlExample extends MControl.Example {
+            class MCtrlExample extends MControl.Controller {
 
                 constructor(element) {
                     super(element)
@@ -65,7 +66,7 @@
                 }
             }
         )
-        MControl.start(document.body)
+        MControl.start()
 
     })
 </script>
