Added Labeling demo

--- a/getstarted.html
+++ b/getstarted.html
@@ -88,7 +88,7 @@ constructor(...args) {
             <li>add method to be used by your event handler bindings. 
                 Here the method changes the 'color' dynamic property randomly.
                 Note that the method use a controller.refs property where dom
-                elements had been picked by 'm-ref' labelling (see below)
+                elements had been collected by 'm-ref' labelling (see below)
                 <pre>
 changeColor() {
     const colors = ["silver", "gray", "black", "red", "maroon", "yellow", "olive", "lime", "green", "aqua", "teal", "blue", "navy", "fuchsia", "purple"]
