--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li m-on:click="this.go($event)" _src="./ex_interpolation.html">interpolation </li>
             <li m-on:click="this.go($event)" _src="./ex_2wdbinding.html">to way data binding</li>
             <li m-on:click="this.go($event)" _src="./ex_eventhandler.html">handling events</li>
-            <li m-on:click="this.go($event)">Item 4</li>
+            <li m-on:click="this.go($event)" _src="./ex_domlabeling.html">dom elements handling</li>
             <li m-on:click="this.go($event)">Item 5</li>
         </ul>
         <hr>
