--- a/intro.html
+++ b/intro.html
@@ -23,6 +23,7 @@
                 </li>
                 <li>two-way binding beetween input element and model property: m-bind:value="property"</li>
                 <li>event handling binded to controller method: m-on:event=" this.method($event) "</li>
+                <li>collection of dom elements through 'm-ref' modifier labeling labeling"</li>
             </ul>
         </p>
     </div>
