Added m-class attribute

--- a/ex_2wdbinding.html
+++ b/ex_2wdbinding.html
@@ -82,7 +82,7 @@
 
         MControl.register(
 
-            class MCtrlExample extends MControl.Controller {
+            class MCtrlExample extends MC.Controller {
 
                 constructor(element) {
                     super(element)
