--- a/ex_domlabeling.html
+++ b/ex_domlabeling.html
@@ -36,7 +36,7 @@
         </div>
         <script m-ref="ex_code_changeColor">
             window.addEventListener('load', _ => {
-                class MCtrlExample extends MControl.Controller {
+                class MCtrlExample extends MC.Controller {
                     constructor(element) {
                         super(element)
                         this.model.selected = 'elem1'
