--- a/ex_interpolation.html
+++ b/ex_interpolation.html
@@ -55,7 +55,7 @@
         MControl.register(
 
             // create your controller
-            class MCtrlExample extends MControl.Controller {
+            class MCtrlExample extends MC.Controller {
 
                 constructor(element) {
                     // call super contsructor
