--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
         <p>MControl is a MVC light framework. It was developed with KISS principle in mind,
             (aka. Keep It Simple, Stupid).
         </p>
-        <p>MControl.Controller class is provided for implementing controller behavior:
+        <p>MC.Controller class is provided for implementing controller behavior:
             MVC Controllers are responsible for controlling the flow of the application execution.
         </p>
         <p> Provided features are :
@@ -26,6 +26,16 @@
                 <li>collection of dom elements through 'm-ref' modifier labeling labeling"</li>
             </ul>
         </p>
+        <h2>MC Concepts</h2>
+        <p></p>
+        <h2>MVC</h2>
+        <p></p>
+        <h2>Controller</h2>
+        <p></p>
+        <h2>Dynamic properties</h2>
+        <p></p>
+        <h2>Data bindings</h2>
+        <p></p>
     </div>
 </body>
 </html>
