compilation refactoring shorter and more robust

--- a/intro.html
+++ b/intro.html
@@ -27,7 +27,9 @@
             </ul>
         </p>
         <h2>MC Concepts</h2>
-        <p></p>
+        <p>Controllers are javascript ES6 classes</p>
+        <p>No Virtual DOM</p>
+        <p>Attribute modifiers 'm-on:...' or 'attribute</p>
         <h2>MVC</h2>
         <p></p>
         <h2>Controller</h2>
