--- a/ex_2wdbinding.html
+++ b/ex_2wdbinding.html
@@ -31,7 +31,7 @@
 
         <fieldset>
             <div m-ref=ex_html_a><label>Name : </label> <input  required m-bind:value="name" type="text" placeholder="Name"></div>
-            <div m-ref=ex_html_b><label>Number : </label><input m-bind:value="number" type="number" placeholder="Number"></div>
+            <div m-ref=ex_html_b><label>Number : </label><input m-bind:value="number" type="number" placeholder="Number"><input m-bind:value="number" type="number" placeholder="Number"></div>
             <div m-ref=ex_html_c>
                 <label>City : </label><input m-bind:value="city" type="text" placeholder="A city" list="cities">
                 <datalist id=cities>
