--- a/ex_eventhandler.html
+++ b/ex_eventhandler.html
@@ -29,7 +29,7 @@
         <input m-on:click="this.code()" style="float: right;" type=button value="see code">
 
         <legend>The demo :</legend>
-        <p> My preferred number is : {{number}}</p>
+        <p> My preferred number is : {{ µ.number }}</p>
         <div>
             <span m-ref="ex_html_a">
                 <input m-on:click="this.inc()" type="button" value="More" class="pure-button pure-button-primary">
