--- a/ex_interpolation.html
+++ b/ex_interpolation.html
@@ -34,8 +34,8 @@
         <input m-on:click="this.code()" style="float: right;" type=button value="see code">
         <legend>The demo :</legend>
         <div m-ref=ex_html_inter>
-            My name is {{ name }}. My prefered color is {{ color }} <br>
-            My magic number is {{ number  * this.coeff }}
+            My name is {{ µ.name }}. My prefered color is {{ µ.color }} <br>
+            My magic number is {{ µ.number  * this.coeff }}
         </div>
     </fieldset>
 
