--- a/getstarted.html
+++ b/getstarted.html
@@ -25,11 +25,11 @@
     <fieldset>
         <input m-on:click="this.code()" style="float: right;" type=button value="see code">
         <div m-ref="ex_html_html">
-            Name : <input type="text" m-bind:value=name>
+            Name : <input type="text" m-bind:value=µ.name>
             <button m-on:click="this.changeColor()">choose color</button>
             <p m-ref=myelem>
-                Hello {{ name }} ! <br>
-                My prefered color is {{ color }}<br>
+                Hello {{ µ.name }} ! <br>
+                My prefered color is {{ µ.color }}<br>
             </p>
         </div>
         <script m-ref="ex_html_code">
