--- a/ex_2wdbinding.html
+++ b/ex_2wdbinding.html
@@ -24,16 +24,16 @@
         <input m-on:click="this.code()" style="float: right;" type=button value="see code">
 
         <legend>The demo :</legend>
-        <div> My name is {{name}}</div>
-        <div> My preferred number is {{number}}</div>
-        <div> My preferred city is {{city}}</div>
-        <div> My prefered browser is  {{browser}} </div>
+        <div> My name is {{ µ.name }}</div>
+        <div> My preferred number is {{ µ.number }}</div>
+        <div> My preferred city is {{ µ.city }}</div>
+        <div> My prefered browser is  {{ µ.browser }} </div>
 
         <fieldset>
-            <div m-ref=ex_html_a><label>Name : </label> <input  required m-bind:value="name" type="text" placeholder="Name"></div>
-            <div m-ref=ex_html_b><label>Number : </label><input m-bind:value="number" type="number" placeholder="Number"><input m-bind:value="number" type="number" placeholder="Number"></div>
+            <div m-ref=ex_html_a><label>Name : </label> <input  required m-bind:value="µ.name" type="text" placeholder="Name"></div>
+            <div m-ref=ex_html_b><label>Number : </label><input m-bind:value="µ.number" type="number" placeholder="Number"><input m-bind:value="µ.number" type="number" placeholder="Number"></div>
             <div m-ref=ex_html_c>
-                <label>City : </label><input m-bind:value="city" type="text" placeholder="A city" list="cities">
+                <label>City : </label><input m-bind:value="µ.city" type="text" placeholder="A city" list="cities">
                 <datalist id=cities>
                     <option value="Paris">Paris</option>
                     <option value="Tunis">Tunis</option>
@@ -41,7 +41,7 @@
                 </datalist>
             </div>
             <div m-ref=ex_html_d>
-                <label>Browser : </label><select m-bind:value=browser>
+                <label>Browser : </label><select m-bind:value=µ.browser>
                     <option value="Internet Explorer">Internet Explorer</option>
                     <option value="Firefox">Firefox</option>
                     <option value="Chrome">Chrome</option>
