--- a/ex_domlabeling.html
+++ b/ex_domlabeling.html
@@ -27,7 +27,7 @@
             <div m-ref="elem1"> I am the first element </div>
             <div m-ref="elem2"> I am the second element </div>
             <div m-ref="elem3"> I am the third element </div>
-            <label>Choose element : </label><select m-bind:value=selected>
+            <label>Choose element : </label><select m-bind:value=µ.selected>
                 <option value="elem1">First</option>
                 <option value="elem2">Second</option>
                 <option value="elem3">Third</option>
