--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li m-on:click="this.go($event)" src="./ex_eventhandler.html">handling events</li>
             <li m-on:click="this.go($event)" src="./ex_domlabeling.html">dom elements handling</li>
             <li m-on:click="this.go($event)" src="./ex_classstyle.html">class/style handling</li>
-            <li m-on:click="this.go($event)">Item 5</li>
+            <li m-on:click="this.go($event)" src="./ex_varscope.html">Scoped variables</li>
         </ul>
         <hr>
         <a href="#">Contact</a>
